...
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigationBtnGroup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
...
            android:enabled="false"
            android:onClick="onPreviousStep"
            android:padding="16dp"
            android:text="@string/previous_step" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onNextStep"
            android:padding="16dp"
...
