<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add_to_widget"
        android:orderInCategory="1"
        android:title="@string/add_to_widget"
        app:showAsAction="always" />
</menu>